# doc-assistant-backend

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 268f5bded8c7_.py  69c73fba9f11_.py  73a2c21d5196_.py  980f383edb7f_enable_uuid_ossp_extension.py
app/: context.py
app/api/: api.py
app/api/routers/: assistant.py  chat.py  documents.py  query.py
app/assistant/: doc_reader.py
app/core/: config.py  constants.py
app/engine/: constants.py  context.py  index.py  indexing.py
app/models/: db.py
app/schemas/: base.py
app/services/: document.py
app/utils/: file_utils.py
scripts/: build_vector_tables.py
